<resources>
    <string name="app_name">IWantPizza</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_admin">AdminActivity</string>
    <string name="title_activity_manage_pizzas">ManagePizzasActivity</string>
    <string name="title_activity_add_pizza">AddPizzaActivity</string>
    <string name="title_activity_sign_up">SignUp</string>
    <string name="Login">Login</string>
    <string name="Register">Register</string>
    <string name="UserName">Name</string>
    <string name="phone">phone</string>
    <string name="Email">Email</string>
    <string name="Address">Address</string>
    <string name="Password">Password</string>
    <string name="title_activity_map_address">MapAddress</string>
    <string name="title_activity_mapaddress">mapaddress</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Order">Order</string>

    <string-array name="locationsArray">
        <item>Default</item>
        <item>Current</item>
        <item>Manual</item>
    </string-array>

    <string name="title_activity_view_pizzas">ViewPizzasActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
</resources>
