<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@drawable/layout"
    tools:context="com.example.irfanshahzad.myapplication.SignUp">
    <TextView android:text="User Name" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView"

        android:layout_marginTop="30dp"
        android:layout_alignParentTop="true"
        android:layout_alignLeft="@+id/button2"
        android:layout_alignStart="@+id/button2"
        android:textColor="#ffffff" />
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:inputType="textPersonName"
        android:hint="@string/UserName"
        android:ems="10"
        android:gravity="center"
        android:id="@+id/editText3"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:background="@drawable/edittext"
        android:layout_marginTop="15dp" />
    <TextView android:text="Phone" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView1"

        android:layout_marginTop="100dp"
        android:layout_alignParentTop="true"
        android:layout_alignLeft="@+id/button2"
        android:layout_alignStart="@+id/button2"
        android:textColor="#ffffff" />
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:inputType="phone"
        android:ems="10"
        android:gravity="center"
        android:id="@+id/editText4"
        android:layout_below="@+id/editText3"
        android:layout_alignRight="@+id/editText3"
        android:background="@drawable/edittext"
        android:layout_alignEnd="@+id/editText3"
        android:hint="@string/phone"
        android:layout_marginTop="25dp" />
    <TextView android:text="Email" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView2"

        android:layout_marginTop="160dp"
        android:layout_alignParentTop="true"
        android:layout_alignLeft="@+id/button2"
        android:layout_alignStart="@+id/button2"
        android:textColor="#ffffff" />
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/editText5"
        android:background="@drawable/edittext"
        android:hint="@string/Email"
        android:gravity="center"
        android:layout_below="@+id/editText4"
        android:layout_alignLeft="@+id/editText4"
        android:layout_alignStart="@+id/editText4"
        android:layout_marginTop="25dp"/>
    <TextView android:text="Address" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView3"

        android:layout_marginTop="230dp"
        android:layout_alignParentTop="true"
        android:layout_alignLeft="@+id/button2"
        android:layout_alignStart="@+id/button2"
        android:textColor="#ffffff" />
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:inputType="textPostalAddress"
        android:ems="10"
        android:id="@+id/editText6"
        android:layout_below="@+id/editText5"
        android:layout_alignLeft="@+id/editText5"
        android:layout_alignStart="@+id/editText5"
        android:background="@drawable/edittext"
        android:gravity="center"
        android:hint="@string/Address"
        android:layout_marginTop="25dp" />
    <TextView android:text="Password" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView5"

        android:layout_marginTop="290dp"
        android:layout_alignParentTop="true"
        android:layout_alignLeft="@+id/button2"
        android:layout_alignStart="@+id/button2"
        android:textColor="#ffffff" />
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/editText7"
        android:layout_marginTop="25dp"
        android:layout_below="@+id/editText6"
        android:layout_alignLeft="@+id/editText6"
        android:layout_alignStart="@+id/editText6"
        android:background="@drawable/edittext"
        android:gravity="center"
        android:hint="@string/Password"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="SignUp"
        android:id="@+id/button3"
        android:layout_below="@+id/editText7"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:background="@drawable/button_style"
        android:layout_marginTop="10dp"/>

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/pb"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:visibility="gone"/>

</RelativeLayout>
